<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="setPlayerActivity" type="com.example.skullkingblock.SetPlayersActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetPlayersActivity">


        <Button
            android:id="@+id/incrementPlayerNumberButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(view) -> setPlayerActivity.changePlayerNumber(view)}"
            android:text="@string/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PlayerNumberQueryView" />

        <Button
            android:id="@+id/decrementPlayerNumberButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="@{(view) -> setPlayerActivity.changePlayerNumber(view)}"
            android:text="@string/minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PlayerNumberQueryView" />

        <TextView
            android:id="@+id/playerNumberView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@{Integer.toString(setPlayerActivity.numberOfPlayers)}"
            app:layout_constraintEnd_toStartOf="@+id/incrementPlayerNumberButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/decrementPlayerNumberButton"
            app:layout_constraintTop_toBottomOf="@+id/PlayerNumberQueryView" />

        <Button
            android:id="@+id/commitPlayerNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> setPlayerActivity.sendResults()}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/PlayerNumberQueryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/playercount_query"
            app:layout_constraintStart_toStartOf="@+id/decrementPlayerNumberButton"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/riskyZeroCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/risky_zero"
            app:layout_constraintBottom_toTopOf="@+id/commitPlayerNumber"
            app:layout_constraintStart_toStartOf="@+id/decrementPlayerNumberButton" />

        <TextView
            android:id="@+id/ExtraRulesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/extra_rules"
            app:layout_constraintBottom_toTopOf="@+id/riskyZeroCheck"
            app:layout_constraintStart_toStartOf="@+id/PlayerNumberQueryView" />

        <EditText
            android:id="@+id/playerName1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/player_1"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/decrementPlayerNumberButton"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/playerName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/player_2"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerName1"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/playerName3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/player_3"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerName2"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/playerName4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/player_4"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerName3"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/playerName5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/player_5"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerName4" />

        <EditText
            android:id="@+id/playerName6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/player_6"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerName5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>